# exastro-it-automation-dev

./: .gitguardian.yaml  .gitignore
.devcontainer/: .env.sample  (+3 more)
ita_root/ita_job_etl/: .gitignore  Dockerfile  flask.py  job_config.py  job_manager.py  pyproject.toml  pytest.ini.sample
ita_root/ita_job_etl/jobs/: ansible_legacy_role_vars_listup_executor.py  ansible_legacy_vars_listup_executor.py  ansible_pioneer_vars_listup_executor.py  base_job_executor.py  menu_create_executor.py  test_job1_executor.py
ita_root/ita_job_etl/libs/: clean_up_info.py  clean_up_job.py  interval_timer.py  job_classes.py  job_exception.py  job_logger.py  job_queue.py  job_queue_row.py  job_thread.py  job_threads.py  sub_process.py  sub_processes.py
ita_root/ita_job_etl/libs/ansible_legacy_role_vars_listup/: backyard_main.py
ita_root/ita_job_etl/libs/ansible_legacy_vars_listup/: backyard_main.py
ita_root/ita_job_etl/libs/ansible_pioneer_vars_listup/: backyard_main.py
ita_root/ita_job_etl/libs/menu_create/: backyard_main.py  menu_create_main.py
ita_root/ita_job_etl/tests/: conftest.py  docker-compose-up-mysql.sh  docker-compose.yml  test_ansible_legacy_vars_listup_executor.py  test_job_manager.py  test_menu_create_executor.py
ita_root/ita_job_etl/tests/common/: request_parameters.py  test_common.py
ita_root/ita_job_etl/tests/jobs/: TestJobExecutor.py
ita_root/ita_job_etl/tests/libs/: queries_test_ansible_legacy_vars_listup.py  queries_test_common.py  queries_test_menu_create.py
ita_root/ita_job_etl/tests/tools/: make_tests_db_exports.py  make_tests_db_exports.sh
(+121 files in other folders)
