[tool.poetry]
name = "ita-job-etl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = ">=0.0.0"
pyyaml = ">=0.0.0"
pytz = ">=0.0.0"
pymysql = ">=0.0.0"
pycryptodome = ">=0.0.0"
ulid-py = ">=0.0.0"
jinja2 = ">=0.0.0"
chardet = ">=0.0.0"
opentelemetry-distro = "^0.49b2"
opentelemetry-exporter-otlp = "^1.28.2"
opentelemetry-instrumentation-pymysql = "^0.49b2"
opentelemetry-instrumentation-requests = "^0.49b2"
opentelemetry-instrumentation-flask = "^0.49b2"


[tool.poetry.group.first_install.dependencies]
certifi = ">=0.0.0"


[tool.poetry.group.develop_build.dependencies]
debugpy = ">=0.0.0"
flake8 = ">=0.0.0"
autopep8 = ">=0.0.0"
psutil = ">=0.0.0"
pytest = ">=0.0.0"
pytest-env = ">=0.0.0"
pytest-cov = ">=0.0.0"
pytest-docker = ">=0.0.0"
pytest-mock = ">=0.0.0"
requests-mock = ">=0.0.0"
connexion = {version = "^2.0.0", extras = ["swagger-ui", "uvicorn"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
